# hufs-crawling

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
crawling/: scholarship.py
worker/: date.py  driver.py  regex.py  slack.py  sql.py
