[tool.poetry]
name = "hufs-crawling"
version = "0.1.0"
description = "[ HUFSpace ] 웹 크롤링 서비스"
authors = ["2_taehyun <63915557+0417taehyun@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.6"
selenium = "^3.141.0"
PyMySQL = "^1.0.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
